# digital-asset-validator-plugin

./: Cargo.toml
msg_pulsar/: Cargo.toml
msg_pulsar/src/: lib.rs
msg_redis/: Cargo.toml
msg_redis/src/: lib.rs
plerkle/: Cargo.toml
plerkle/src/: geyser_plugin_nft.rs  serializer.rs
plerkle_messenger/: Cargo.toml
plerkle_messenger/src/: lib.rs  plerkle_messenger.rs  pulsar_messenger.rs  redis_messenger.rs
plerkle_serialization/src/: transaction_info_generated.rs
plerkle_serialization/src/serializer/: serializer_stable.rs
plerkle_shim/: Cargo.toml
plerkle_shim/src/: lib.rs
plerkle_shim_dummy/: Cargo.toml
plerkle_shim_dummy/src/: lib.rs
