[package]
name = "plerkle_messenger"
description = "Metaplex Messenger trait for Geyser plugin producer/consumer patterns."
version = "0.0.1"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/digital-asset-validator-plugin"
license = "AGPL-3.0"
edition = "2021"
readme = "Readme.md"

[dependencies]
solana-geyser-plugin-interface = { version = "=1.11.3" }
plerkle_serialization = { version = "0.0.1" }
log = "0.4.11"
thiserror = "1.0.30"
async-trait = "0.1.53"
figment = "0.10.6"
serde = "1.0.137"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }